# rustchat

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/lib/: handlers.rs  mod.rs  mongodbcollections.rs
