[package]
name = "rustchat"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = { version = "2.8", features = ["tokio-runtime"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
axum = "0.8.7"
serde_json = "1.0.145"
